src/index.css
body, html, #root {
    height: 100%;
    margin: 0;
}

#root {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: aliceblue;
}

.title {
    text-align: center;
    font-size: 3rem;
    font-family: cursive;
    font-style: italic;
}

.card-cont {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 8px;
    padding-bottom: 50px;
}

.card {
    background-color: rgb(210, 210, 210);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 2px solid grey;
    border-radius: 12px;
    padding: 8px;
}

.card .name {
    font-weight: bold;
    font-family: cursive;
}

.score-board {
    background-color: rgb(255, 179, 179);
    font-size: 1.5rem;
    padding: 10px;
    border: 2px double red;
    border-radius: 18px;
    font-weight: bold;
    position: fixed;
    bottom: 0;
}

